--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,88 @@
-body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 100vh;
+/* Misc Styling */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+* {
     margin: 0;
     padding: 0;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    border: solid 2px red;
+body {
+    font-family: 'Roboto', sans-serif;
 }
 
-.header-section {
-    background-color: #1F2937;
-    display: flex;
-    border: solid 2px green;
-    justify-content: space-around;
-    padding: 16px;
+/* header */
+.header {
+    background-color: #1f2937;
+    padding: 16px 208px;
 }
 
-.header-logo {
-    color: #F9FAF8;
+/* navigation bar */
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.nav-bar ul {
+    list-style: none;
+    display: flex;
+    gap: 24px;
+}
+
+.logo {
     font-size: 24px;
     font-weight: 900;
-    /* border: 2px solid red; */
+    color: #f9faf8;
 }
 
-ul {
-    /* border: red solid 2px; */
+a, .text, .paragraph {
+    font-size: 18px;
+    color: #e5e7eb;
+    text-decoration: none;
+}
+
+/* hero section */
+.welcome {
     display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    gap: 24px;
-    color: #F9FAF8;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    padding: 112px 0;
 }
 
+.welcome .description {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.welcome .placeholder {
+    flex-shrink: 0;
+    width: 50%;
+}
+
+.welcome .title {
+    color: #f9faf8;    
+    font-weight: 900;
+    font-size: 48px;
+}
+
+button {
+    padding: 7px 16px;
+    width: 120px;
+    background: #3882f6;
+    border-radius: 8px;
+}
+
+.welcome button {
+    font-size: 18px;
+    border: none;
+    color: #e5e7eb;
+}
+
+.image {
+    background: gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 215px;
+}
