--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ a, .text, .paragraph {
 
 .welcome .placeholder {
     flex-shrink: 0;
-    width: 50%;
+    width: 45%;
 }
 
 .welcome .title {
@@ -86,3 +86,50 @@ button {
     align-items: center;
     height: 215px;
 }
+/* Cards Section */
+.main {
+    /* border: 2px red solid; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px 208px;
+    margin-top: 48px;
+}
+
+.main h2 {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 48px 0 96px 0;
+    font-size: 18px;
+    color: #1f2937;
+    text-decoration: none;
+}
+
+.card {
+    /* border: red solid 2px; */
+    text-align: center;
+    max-width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+}
+
+.square {
+    border: 4px solid #3882f6;
+    border-radius: 20px;
+    width: 160px;
+    height: 160px;
+}
+
+
+
+/* Quote Section */
