--- a/styles.css
+++ b/styles.css
@@ -151,3 +151,56 @@ button {
     font-weight: 100;
     color: #1f2937;
 }
+
+/* Sign Up Section */
+.sign-up {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 80px 208px;
+}
+
+.container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3882f6;
+    padding: 48px;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.container button {
+    border: 2px solid #fff;
+}
+
+strong {
+    font-size: 24px;
+    color: #fff;
+}
+
+.button {
+    padding: 7px 16px;
+    width: 120px;
+    background: #3882f6;
+    border-radius: 8px;
+    color: #e5e7eb;
+    font-weight: 900;
+    padding: 8px;
+}
+
+.click {
+    font-size: 18px;
+    color: #e5e7eb;
+    text-decoration: none;
+}
+
+/* Footer Section */
+footer {
+    background-color: #1f2937;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 0;
+}
